Resolve "Rework MLL for next release"